SPA-1419. Issue with background color on dark mode

--- a/src/app/passes/passes.component.scss
+++ b/src/app/passes/passes.component.scss
@@ -86,7 +86,7 @@
   justify-content: center;
   margin-left: auto;
   margin-right: auto;
-  height: calc(100% - 78px);
+  height: calc(100vh - 78px);
   overflow: auto;
   padding-top: 50px;
 }
